--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^7.1.0",
     "ngx-pagination": "^5.1.1",
+    "ngx-spinner": "^13.1.1",
     "ngx-tabset": "^2.2.0",
     "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^14.2.3",
